# PapasKiss

./: DinnerRolls.html  Kannelbulle.html  MousseAuChocolat.html  NoKneadSourdoughBread.html  README.md  Shakshuka.html  SourdoughBread.html  SourdoughStarter.html  StudentsSourdoughBread.html  build.py  index.html  pyproject.toml  setup.cfg
.github/: publish.yml
.github/workflows/: publish.yml
Breakfast/: Shakshuka.cook
Dessert/: Mousse_Au_Chocolat.cook
Doughs/: Dinner_Rolls.cook  Kannelbulle.cook  No_Knead_Sourdough_Bread.cook  Sourdough_Bread copy.cook  Sourdough_Starter.cook  Students_Sourdough_Bread.cook
templates/: base.html  overview.html  recipe.html
